--- a/index.html
+++ b/index.html
@@ -3,28 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DVaBoi Simple Site</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Stormrider Links</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1f1f1f);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+    }
+    .profile {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .profile h1 {
+      margin: 0.5rem 0 0 0;
+    }
+    .links {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      max-width: 400px;
+    }
+    .link-button {
+      background: #111;
+      border: 2px solid #00ccff;
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      font-size: 1.1rem;
+      font-weight: bold;
+      transition: all 0.25s ease;
+      box-shadow: 0 0 6px #00ccff20;
+    }
+    .link-button:hover {
+      background: #00ccff;
+      color: black;
+      transform: scale(1.05);
+      box-shadow: 0 0 12px #00ccff80;
+    }
+    .footer {
+      margin-top: 3rem;
+      padding: 1.5rem;
+      text-align: center;
+      color: #aaa;
+      font-size: 0.95rem;
+      border-top: 1px solid #333;
+    }
+    .footer a {
+      color: #00ccff;
+      text-decoration: none;
+    }
+    .footer a:hover {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+
   <div class="profile">
-    <img class="avatar" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIwAAACMCAIAAAD+Ue6YAAAAGXRFWHRTb2Z0d2FyZQBwYWludC5uZXQgNC4wLjEyQNk6mgAAAItJREFUeJzt3TEBAAAAwqD1T20ND6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDm2AAAXLgrQUAAAAASUVORK5CYII=" alt="Avatar" />
-    <h1>DVaBoi</h1>
+    <h1>Stormrider</h1>
     <p>Game dev, streamer, coder, creator ⚡</p>
   </div>
 
-  <div class="links">
-    <a class="link-button" href="https://github.com/dvaboi" target="_blank" rel="noopener noreferrer">💻 GitHub Projects</a>
-    <a class="link-button" href="https://www.youtube.com/@FollowDVaBoi" target="_blank" rel="noopener noreferrer">📺 YouTube Channel</a>
-    <a class="link-button" href="https://kick.com/dvaboi" target="_blank" rel="noopener noreferrer">🎥 Live Stream</a>
-    <a class="link-button" href="#" id="adultToggle">🔞 Adults Only</a>
+  <div id="links" class="links">
+    <!-- Links will be loaded here dynamically -->
   </div>
 
-  <div id="adult-links" style="display:none;">
-    <a class="link-button" href="https://example.com/adult1" target="_blank" rel="noopener noreferrer">🔥 Exclusive Gallery</a>
-    <a class="link-button" href="https://example.com/adult2" target="_blank" rel="noopener noreferrer">👀 Behind the Scenes</a>
+  <div class="footer">
+    <p>
+      ⚡️ Built with ❤️ by <strong>DVaBoi</strong> | 💀 Powered by 
+      <a href="https://miskomega.com" target="_blank"><strong>MiskOmega</strong></a>
+    </p>
+    <p>
+      📬 Contact: <a href="mailto:contact@miskomega.com">contact@miskomega.com</a>
+    </p>
+    <p style="font-size: 0.8rem; color: #666;">© 2025 MiskOmega Productions. All rights reserved.</p>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    // Fetch links.json and build the link buttons
+    fetch('links.json')
+      .then(response => response.json())
+      .then(links => {
+        const container = document.getElementById('links');
+        links.forEach(link => {
+          const a = document.createElement('a');
+          a.href = link.url;
+          a.target = "_blank";
+          a.className = 'link-button';
+          a.textContent = `${link.emoji} ${link.name}`;
+          container.appendChild(a);
+        });
+      })
+      .catch(err => {
+        console.error('Failed to load links:', err);
+        const container = document.getElementById('links');
+        container.textContent = 'Failed to load links.';
+      });
+  </script>
+
 </body>
 </html>
