--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     header h1 {
       font-size: 2.2rem;
       margin: 0;
-      color: #00ccff;
+      color: #ff3399;
     }
     main {
       flex: 1;
@@ -75,7 +75,7 @@
       gap: 1rem;
     }
     .viewer-controls button {
-      background: #00ccff;
+      background: #ff3399;
       border: none;
       color: #121212;
       padding: 0.5rem 1rem;
@@ -84,7 +84,7 @@
       cursor: pointer;
     }
     .viewer-controls button:hover {
-      background: #00aacc;
+      background: #ff3399;
     }
     footer {
       text-align: center;
