--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MiskOmega Gallery</title>
+  <title>Femboy Gallery</title>
   <style>
     body {
       margin: 0;
@@ -98,7 +98,7 @@
 <body>
 
 <header>
-  <h1>MiskOmega Cube Gallery</h1>
+  <h1>DVaBoi Femboy Model Gallery</h1>
 </header>
 
 <main id="gallery">
