--- a/index.html
+++ b/index.html
@@ -2,160 +2,174 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Femboy Gallery</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DVaBoi ADULT ONLY Links</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #121212;
       color: #eee;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
     }
     header {
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem;
       border-bottom: 1px solid #444;
     }
     header h1 {
-      font-size: 2.2rem;
       margin: 0;
+      font-weight: 700;
+      font-size: 2.5rem;
       color: #ff3399;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1rem;
+      color: #aaa;
     }
     main {
       flex: 1;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
-      gap: 1rem;
       padding: 2rem;
-      max-width: 1000px;
+      max-width: 500px;
       margin: 0 auto;
-    }
-    .thumb {
-      background: #222;
-      border: 1px solid #333;
-      border-radius: 6px;
-      overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.2s;
-      aspect-ratio: 2/1;
-    }
-    .thumb:hover {
-      transform: scale(1.03);
-    }
-    .thumb img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    /* Viewer */
-    #viewer {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.95);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      z-index: 9999;
-    }
-    #viewer img {
-      max-width: 90%;
-      max-height: 80vh;
-      border-radius: 6px;
-      box-shadow: 0 0 20px #000;
-    }
-    .viewer-controls {
-      margin-top: 1rem;
       display: flex;
-      gap: 1rem;
+      flex-direction: column;
+      gap: 1.5rem;
     }
-    .viewer-controls button {
-      background: #ff3399;
-      border: none;
-      color: #121212;
-      padding: 0.5rem 1rem;
+    a.link-button {
+      display: block;
+      padding: 1rem;
+      background: #222;
+      color: #ff3399;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 8px;
       font-weight: 600;
-      border-radius: 6px;
+      transition: background 0.3s ease;
       cursor: pointer;
     }
-    .viewer-controls button:hover {
+    a.link-button:hover {
       background: #ff3399;
+      color: #121212;
     }
     footer {
       text-align: center;
-      padding: 1rem;
-      font-size: 0.85rem;
-      color: #555;
+      padding: 1rem 0;
+      font-size: 0.9rem;
+      color: #888;
+      background-color: #111;
       border-top: 1px solid #444;
+    }
+
+    /* Age Verification Overlay */
+    #age-verification {
+      position: fixed;
+      inset: 0;
+      background: rgba(18,18,18,0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #eee;
+      padding: 2rem;
+      z-index: 9999;
+      text-align: center;
+    }
+    #age-verification h2 {
+      margin: 0 0 1rem;
+      font-weight: 700;
+      font-size: 2rem;
+      color: #ff3399;
+    }
+    #age-verification p {
+      margin: 0 0 2rem;
+      font-size: 1.1rem;
+      line-height: 1.4;
+    }
+    #age-verification button {
+      padding: 0.8rem 2rem;
+      margin: 0 1rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 6px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    #age-yes {
+      background: #ff3399;
+      color: #121212;
+    }
+    #age-yes:hover {
+      background: #cc0077;
+    }
+    #age-no {
+      background: #444;
+      color: #eee;
+    }
+    #age-no:hover {
+      background: #666;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>DVaBoi Femboy Model Gallery</h1>
+  <h1>DVaBoi 18+</h1>
+  <p>🔞 ADULT ONLY All content below is strictly for adults</p>
 </header>
 
-<main id="gallery">
-  <!-- Replace with your CubeUpload image links -->
-  <div class="thumb" data-full="https://u.cubeupload.com/DVaBoi/ffbCrashoutsGirlDiva01.png">
-    <img src="https://u.cubeupload.com/DVaBoi/ffbCrashoutsGirlDiva01.png" alt="Thumbnail 1" />
-  </div>
-  <div class="thumb" data-full="https://u.cubeupload.com/DVaBoi/424DivaTop02.png">
-    <img src="https://u.cubeupload.com/DVaBoi/424DivaTop02.png" alt="Thumbnail 2" />
-  </div>
-  <div class="thumb" data-full="https://u.cubeupload.com/DVaBoi/CrashoutsGirl02.png">
-    <img src="https://u.cubeupload.com/DVaBoi/CrashoutsGirl02.png" alt="Thumbnail 3" />
-  </div>
+<main>
+  <a href="#" class="link-button adult-link" data-adult-url="https://onlyfans.com/dvaboi">💙 OnlyFans</a>
+  <a href="#" class="link-button adult-link" data-adult-url="https://onlyfans.com/dvaboifree">🆓 Free OnlyFans</a>
+  <a href="#" class="link-button adult-link" data-adult-url="https://www.pornhub.com/model/dvaboi">💛 Pornhub</a>
 </main>
 
-<div id="viewer">
-  <img id="viewer-img" src="" alt="Full Image" />
-  <div class="viewer-controls">
-    <button id="prev">⬅️ Prev</button>
-    <button id="close">✖ Close</button>
-    <button id="next">➡️ Next</button>
+<footer>
+  © 2025 — MiskOmega // DVaBoi — All rights reserved.
+</footer>
+
+<!-- AGE VERIFICATION OVERLAY -->
+<div id="age-verification" role="dialog" aria-modal="true" aria-labelledby="age-title" aria-describedby="age-desc">
+  <h2 id="age-title">🔞 Adults Only</h2>
+  <p id="age-desc">This content is for 18 years or older.<br>Are you 18 or older?</p>
+  <div>
+    <button id="age-yes">Yes, take me in</button>
+    <button id="age-no">No, take me back</button>
   </div>
 </div>
 
-<footer>
-  © MiskOmega DVaBoi. All rights reserved.
-</footer>
-
 <script>
-  const thumbs = Array.from(document.querySelectorAll('.thumb'));
-  const viewer = document.getElementById('viewer');
-  const viewerImg = document.getElementById('viewer-img');
-  let currentIndex = -1;
+  const adultLinks = document.querySelectorAll('.adult-link');
+  const ageOverlay = document.getElementById('age-verification');
+  const yesBtn = document.getElementById('age-yes');
+  const noBtn = document.getElementById('age-no');
+  let redirectUrl = '';
 
-  function openViewer(index) {
-    currentIndex = index;
-    viewerImg.src = thumbs[index].dataset.full;
-    viewer.style.display = 'flex';
-  }
-
-  thumbs.forEach((thumb, index) => {
-    thumb.addEventListener('click', () => openViewer(index));
+  adultLinks.forEach(link => {
+    link.addEventListener('click', e => {
+      e.preventDefault();
+      redirectUrl = e.currentTarget.getAttribute('data-adult-url');
+      ageOverlay.style.display = 'flex';
+    });
   });
 
-  document.getElementById('close').onclick = () => {
-    viewer.style.display = 'none';
-    viewerImg.src = '';
-  };
+  yesBtn.addEventListener('click', () => {
+    if (redirectUrl) {
+      window.open(redirectUrl, '_blank', 'noopener,noreferrer');
+      ageOverlay.style.display = 'none';
+      redirectUrl = '';
+    }
+  });
 
-  document.getElementById('prev').onclick = () => {
-    if (currentIndex > 0) openViewer(currentIndex - 1);
-  };
-
-  document.getElementById('next').onclick = () => {
-    if (currentIndex < thumbs.length - 1) openViewer(currentIndex + 1);
-  };
+  noBtn.addEventListener('click', () => {
+    ageOverlay.style.display = 'none';
+    redirectUrl = '';
+  });
 </script>
-
 </body>
 </html>
